fix parameters, shuffle things around
