# uws/generated/servers/python/fastapi/openapi.yaml
@@ -79,7 +79,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/postCreateJob_request'
+              $ref: '#/components/schemas/Parameters'
         description: Job parameters
         required: true
       responses:
@@ -1220,19 +1220,6 @@ components:
           title: parameter
           type: array
       title: parameters
-      type: object
-    postCreateJob_request:
-      additionalProperties: true
-      properties:
-        QUERY:
-          description: The query to be performed
-          example: SELECT * FROM TAP_SCHEMA.tables
-          type: string
-        LANG:
-          description: The language in which the query should be performed
-          example: ADQL
-          type: string
-      title: postCreateJob_request
       type: object
     postUpdateJob_request:
       properties:
