# uws/generated/servers/python/fastapi/src/uws_server/models/post_create_job_request.py
@@ -1,107 +1,0 @@
-# coding: utf-8
-
-"""
-    Universal Worker Service (UWS)
-
-    The Universal Worker Service (UWS) pattern defines how to manage asynchronous execution of jobs on a service.
-
-    The version of the OpenAPI document: 1.2
-    Contact: grid@ivoa.net
-    Generated by OpenAPI Generator (https://openapi-generator.tech)
-
-    Do not edit the class manually.
-"""  # noqa: E501
-
-
-from __future__ import annotations
-import pprint
-import re  # noqa: F401
-import json
-
-
-
-
-from pydantic import ConfigDict, Field, StrictStr
-from typing import Any, ClassVar, Dict, List, Optional
-from uws_server.models.object import object
-try:
-    from typing import Self
-except ImportError:
-    from typing_extensions import Self
-
-class PostCreateJobRequest(object):
-    """
-    PostCreateJobRequest
-    """ # noqa: E501
-    query: Optional[StrictStr] = Field(default=None, description="The query to be performed", alias="QUERY")
-    lang: Optional[StrictStr] = Field(default=None, description="The language in which the query should be performed", alias="LANG")
-    additional_properties: Dict[str, Any] = {}
-    __properties: ClassVar[List[str]] = ["QUERY", "LANG"]
-
-    model_config = {
-        "populate_by_name": True,
-        "validate_assignment": True,
-        "protected_namespaces": (),
-    }
-
-
-    def to_str(self) -> str:
-        """Returns the string representation of the model using alias"""
-        return pprint.pformat(self.model_dump(by_alias=True))
-
-    def to_json(self) -> str:
-        """Returns the JSON representation of the model using alias"""
-        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
-        return json.dumps(self.to_dict())
-
-    @classmethod
-    def from_json(cls, json_str: str) -> Self:
-        """Create an instance of PostCreateJobRequest from a JSON string"""
-        return cls.from_dict(json.loads(json_str))
-
-    def to_dict(self) -> Dict[str, Any]:
-        """Return the dictionary representation of the model using alias.
-
-        This has the following differences from calling pydantic's
-        `self.model_dump(by_alias=True)`:
-
-        * `None` is only added to the output dict for nullable fields that
-          were set at model initialization. Other fields with value `None`
-          are ignored.
-        * Fields in `self.additional_properties` are added to the output dict.
-        """
-        _dict = self.model_dump(
-            by_alias=True,
-            exclude={
-                "additional_properties",
-            },
-            exclude_none=True,
-        )
-        # puts key-value pairs in additional_properties in the top level
-        if self.additional_properties is not None:
-            for _key, _value in self.additional_properties.items():
-                _dict[_key] = _value
-
-        return _dict
-
-    @classmethod
-    def from_dict(cls, obj: Dict) -> Self:
-        """Create an instance of PostCreateJobRequest from a dict"""
-        if obj is None:
-            return None
-
-        if not isinstance(obj, dict):
-            return cls.model_validate(obj)
-
-        _obj = cls.model_validate({
-            "QUERY": obj.get("QUERY"),
-            "LANG": obj.get("LANG")
-        })
-        # store additional fields in additional_properties
-        for _key in obj.keys():
-            if _key not in cls.__properties:
-                _obj.additional_properties[_key] = obj.get(_key)
-
-        return _obj
-
-
